Fix ‌BlazorUI's SafeArea and Titlebar handling on iOS and macOS

--- a/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
@@ -13,6 +13,10 @@
     box-shadow: $bit-box-shadow-1;
     -webkit-backdrop-filter: blur(20px);
     transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+
+    @supports (-webkit-touch-callout: none) {
+        padding-top: env(safe-area-inset-top);
+    }
 }
 
 .header--full-page {
